Fix the margins of aligned table headers
See https://www.woltlab.com/community/thread/301021-centre-aligning-the-first-row-inserts-unnecessary-spaces-in-the-editor/

--- a/wcfsetup/install/files/style/layout/global.scss
+++ b/wcfsetup/install/files/style/layout/global.scss
@@ -167,7 +167,8 @@ ol.nativeList {
 		list-style-type: decimal;
 	}
 
-	td {
+	td,
+	th {
 		> :first-child {
 			margin-top: 0 !important;
 		}
